# Legacy-Business-Rule-Extraction-Migration-using-LLMs

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  temp.json
assets/raw/Annotated data/: VSCBEX01.json  VSCBEX02.json  VSCBEX03.json  VSCBEX04.json  VSCBEX05.json
assets/raw/Annotated data/v1/: VSCBEX04.json  VSCBEX05.json
assets/raw/Annotated data/v2/: VSCBEX02.json
assets/raw/Annotated data/v3/: VSCBEX01.json  VSCBEX02.json  VSCBEX04.json
assets/raw/Business Logic/: VSCBEX01.json  VSCBEX02.json  VSCBEX04.json  VSCBEX05.json
assets/raw/Business Logic/v1/: VSCBEX03.json
assets/raw/Business Logic/v2/: VSCBEX01.json  VSCBEX02.Json  (+2 more)
assets/raw/COBOL Program/: VSCBEX02.cbl
assets/temp/experiment results Befor 19 Jul/: aggregated_results.csv  analysis_summary.json  analysis_summary.txt  complexity_results.csv  raw_results.csv  results.json  results_summary.csv  summary.json  task_results.csv
docs/: Execution_Status.md  Implementation_Requirements.md  Tracker.md
docs/Temp/: Another_repo_evaluation_summary.md  Tracker_temp_Iter1.md
evaluation/: evaluation_business.py  evaluation_structure.py
experiments/: constants.py  experiments_log.py  log.jsonl  pipeline_logger.py  run_log.txt
experiments/results/: results.json  results_summary.csv  summary.json
pipeline/: _python_cobol.py  analysis.py  evaluation.py  graphs.py  llm_call.py  llm_factory.py  load_data.py  reporting_tables.py  result_reporter.py
prompts/: business_prompts.json  structure_prompts.json
schema/: business_logic.py  program_structure.py
scripts/: re_evaluate.py
(+3 files in other folders)
